Remove obsolete debugger and planning documentation
Deleted CLAUDE-SECTION.md, DEBUGGER.md, and all planning/debugger documents. Updated CLAUDE.md and related doc references to point to new locations and reflect current toolset and architecture. This streamlines documentation and removes outdated or redundant files.